fix bug "background img cannot showing up"

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
 	font-size: 10px;
 	line-height: 175%;
 	/* background shorthand */
-	background: rgba(60, 100, 100, 0.9) url(/img/background.jpg) no-repeat scroll;
+	background: rgba(60, 100, 100, 0.9) url(../img/background.jpg) no-repeat
+		scroll;
 	background-blend-mode: multiply;
 	background-size: cover;
 }
